@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST tweepy-1.8.tar.gz 21393 RMD160 43b12c46a049698ae33fffe6d324a2633fcbae65 SHA1 f501bea1764b1fb6c6d1c7bdb1540da47eb54909 SHA256 8492f2e8ee5055b8fe6f075fdf2ff4a3396efe5458053f0a5e8632f1202ac2bb
 DIST tweepy-1.9.tar.gz 21661 RMD160 6f8d0c59870629d6a625a1f829f5e435755682fe SHA1 511602407756327a9504820b50cfce4d32c5ad84 SHA256 f5e5d7b95ae481c01b5440635170e9a5407ab6ca0a13c0ee29b064bbb2926330
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9oc0gACgkQzJrj3cAXR0mfeACgvdZCzBkgH+CrAO/oW4gFdtAK
-7LIAoIoDOWyv9wBDWsJDyBGyIsIzYOKo
-=GNPz
+iEYEAREKAAYFAk+P45cACgkQzJrj3cAXR0kfZwCeKJNp0v6uTg7HihMRZvoNKGMr
+TnAAnjfZd90y/YvfTnT1ZrcNkwSJpqs9
+=OlQr
 -----END PGP SIGNATURE-----
