@@ -4,11 +4,11 @@ DESCRIPTION=Twitter library for python
 EAPI=4
 HOMEPAGE=http://pypi.python.org/pypi/tweepy/
 IUSE=python_targets_python2_5 python_targets_python2_6 python_targets_python2_7
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=MIT
 RDEPEND=dev-python/oauth python_targets_python2_5? ( dev-python/simplejson ) python_targets_python2_6? ( dev-python/simplejson ) python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 )
 REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
 SRC_URI=mirror://pypi/t/tweepy/tweepy-1.9.tar.gz
 _eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	4e234f0a75d16eabe69191b391892d7b	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=2d7cedbb95bd3e12c20197b166f120d9
+_md5_=d0699412210b02c2ac36d6527ee6e03e
