@@ -1,4 +1,3 @@
-REM 2012-04-19 *1 MSG %"Stabilise x86 dev-python/tweepy-1.9%" %a
 REM 2012-04-23 *1 MSG %"Stabilise amd64 media-gfx/sphinxcontrib-mscgen-0.4%" %a
 REM 2012-04-23 *1 MSG %"Stabilise x86 media-gfx/sphinxcontrib-mscgen-0.4%" %a
 REM 2012-04-27 *1 MSG %"Stabilise amd64 media-gfx/blockdiag-1.1.3%" %a
